--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
+    "react-query": "^3.16.0",
     "react-redux": "^7.2.4",
     "yup": "^0.32.9"
   },
